Added a function of character creation
