# routes/api.php
@@ -20,13 +20,20 @@ use Illuminate\Http\Request;
 $api = app('Dingo\Api\Routing\Router');
 
 $api->version('v1', function ($api) {
-    $api->post('login', 'App\Http\Api\Auth\LoginController@login')
-        ->middleware('localization');
-    $api->post('register', 'App\Http\Api\Auth\RegisterController@register')
-        ->middleware('localization');
-    $api->group(['middleware' => 'api.auth'], function ($api) {
-        $api->get('user', 'App\Http\Api\Controllers\UsersController@index');
+    $api->group([
+        'middleware' => 'localization',
+    ], function ($api) {
+        $api->post('login', 'App\Http\Api\Auth\LoginController@login');
+        $api->post('register', 'App\Http\Api\Auth\RegisterController@register');
+        $api->group([
+            'middleware' => 'api.auth',
+        ], function ($api) {
+            $api->get('user', 'App\Http\Api\Controllers\UsersController@index');
+            $api->post('createCharacter',
+                'App\Http\Api\Auth\RegisterController@createCharacter');
+        });
     });
+
     $api->group([
         'middleware' => 'api',
         'prefix'     => 'password',
